@@ -2456,16 +2456,16 @@ f5: \
         exc_caught = None
         try:
             env.Tool('does_not_exist')
-        except SCons.Errors.SConsEnvironmentError:
+        except SCons.Errors.UserError:
             exc_caught = 1
-        assert exc_caught, "did not catch expected SConsEnvironmentError"
+        assert exc_caught, "did not catch expected UserError"
 
         exc_caught = None
         try:
             env.Tool('$NONE')
-        except SCons.Errors.SConsEnvironmentError:
+        except SCons.Errors.UserError:
             exc_caught = 1
-        assert exc_caught, "did not catch expected SConsEnvironmentError"
+        assert exc_caught, "did not catch expected UserError"
 
         # Use a non-existent toolpath directory just to make sure we
         # can call Tool() with the keyword argument.
