@@ -184,13 +184,16 @@ class Tool:
             if debug: sys.stderr.write("Spec Found? .%s :%s\n" % (self.name, spec))
 
         if spec is None:
-            error_string = "No module named %s" % self.name
-            raise SCons.Errors.SConsEnvironmentError(error_string)
+            sconstools = os.path.normpath(sys.modules['SCons.Tool'].__path__[0])
+            if self.toolpath:
+                sconstools = ", ".join(self.toolpath) + ", " + sconstools
+            error_string = "No tool module '%s' found in %s" % (self.name, sconstools)
+            raise SCons.Errors.UserError(error_string)
 
         module = importlib.util.module_from_spec(spec)
         if module is None:
             if debug: print("MODULE IS NONE:%s" % self.name)
-            error_string = "No module named %s" % self.name
+            error_string = "Tool module '%s' failed import" % self.name
             raise SCons.Errors.SConsEnvironmentError(error_string)
 
         # Don't reload a tool we already loaded.
